fix: button spacing

--- a/src/styles/common/bar.css
+++ b/src/styles/common/bar.css
@@ -2,6 +2,8 @@
   display: flex;
   justify-content: space-between;
   height: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 .bar-container img {
