--- a/src/styles/common/playback.css
+++ b/src/styles/common/playback.css
@@ -1,3 +1,4 @@
 .playback-container {
   display: flex;
+  gap: 10px;
 }
