--- a/src/styles/common/tools.css
+++ b/src/styles/common/tools.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: left;
   align-items: center;
+  gap: 10px;
   user-select: none;
 }
 
